# agentic-wiki

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.html  operations.html  schema.html
docs/concepts/: cloudflare-seo-content-memory.html  cloudflare-seo-option1-to-option2-plan.html
examples/basic/: README.md  generate_fixtures.py  page.html  source.txt
skills/: agentic-wiki-planner  memwiki-planner
src/memwiki/: __init__.py  api.py  capabilities.py  claims.py  cli.py  compiler.py  docs.py  exporter.py  graph.py  html.py  ids.py  init.py  linter.py  manifest.py  models.py  promote.py  query.py  schemas.py  sources.py  workspace.py
tests/: test_memwiki_integration_api.py  test_memwiki_workflow.py
